feat: Added logic for create/upload media
