# tsoa/routes.ts
@@ -837,9 +837,7 @@ export function RegisterRoutes(app: express.Router) {
 
             function MediasController_createMedia(request: any, response: any, next: any) {
             const args = {
-                    payload: {"in":"formData","name":"payload","required":true,"dataType":"string"},
                     file: {"in":"formData","name":"file","required":true,"dataType":"file"},
-                    req: {"in":"request","name":"req","required":true,"dataType":"object"},
             };
 
             // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
